--- a/TicTacToe/maintictactoe.ui
+++ b/TicTacToe/maintictactoe.ui
@@ -128,6 +128,25 @@
      <string>Sign up</string>
     </property>
    </widget>
+   <widget class="QLabel" name="GAMETITLE">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>40</y>
+      <width>281</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>TIC TAC TOE</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
