--- a/TicTacToe/registrationscene.ui
+++ b/TicTacToe/registrationscene.ui
@@ -6,28 +6,41 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>573</width>
-    <height>428</height>
+    <width>635</width>
+    <height>416</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLineEdit" name="usernameInput_2">
+  <widget class="QLineEdit" name="userNameInput">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>10</x>
      <y>80</y>
      <width>151</width>
      <height>31</height>
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" name="passwordInput_2">
+  <widget class="QLineEdit" name="firstNameInput">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>130</y>
+     <x>330</x>
+     <y>80</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="echoMode">
+    <enum>QLineEdit::Normal</enum>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="passwordInput">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>150</y>
      <width>151</width>
      <height>31</height>
     </rect>
@@ -36,11 +49,59 @@
     <enum>QLineEdit::Password</enum>
    </property>
   </widget>
-  <widget class="QLineEdit" name="confirmPasswordInput_2">
+  <widget class="QPushButton" name="signupButton">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>180</y>
+     <x>110</x>
+     <y>360</y>
+     <width>93</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Submit</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="registrationHelpButton">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>360</y>
+     <width>93</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Help</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lastNameInput">
+   <property name="geometry">
+    <rect>
+     <x>330</x>
+     <y>150</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="confirmPasswordInput">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>210</y>
      <width>151</width>
      <height>31</height>
     </rect>
@@ -49,10 +110,40 @@
     <enum>QLineEdit::Password</enum>
    </property>
   </widget>
-  <widget class="QLabel" name="usernameLabel">
+  <widget class="QLineEdit" name="answerInput">
    <property name="geometry">
     <rect>
-     <x>280</x>
+     <x>330</x>
+     <y>220</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="questionInput">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>270</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="retypeAnswerInput">
+   <property name="geometry">
+    <rect>
+     <x>330</x>
+     <y>280</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="userLabel">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
      <y>90</y>
      <width>81</width>
      <height>16</height>
@@ -68,11 +159,11 @@
     <string>Username</string>
    </property>
   </widget>
-  <widget class="QLabel" name="passwordlabel">
+  <widget class="QLabel" name="passwordLabel">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>140</y>
+     <x>170</x>
+     <y>160</y>
      <width>71</width>
      <height>16</height>
     </rect>
@@ -87,12 +178,12 @@
     <string>Password</string>
    </property>
   </widget>
-  <widget class="QLabel" name="confirmPasswordlabel">
+  <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>190</y>
-     <width>111</width>
+     <x>170</x>
+     <y>220</y>
+     <width>121</width>
      <height>16</height>
     </rect>
    </property>
@@ -106,13 +197,13 @@
     <string>Confirm Password</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>260</y>
-     <width>93</width>
-     <height>28</height>
+     <x>170</x>
+     <y>280</y>
+     <width>91</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="font">
@@ -122,16 +213,16 @@
     </font>
    </property>
    <property name="text">
-    <string>Submit</string>
+    <string>Question</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>260</y>
-     <width>93</width>
-     <height>28</height>
+     <x>490</x>
+     <y>90</y>
+     <width>71</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="font">
@@ -141,7 +232,86 @@
     </font>
    </property>
    <property name="text">
-    <string>help</string>
+    <string>First Name</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>160</y>
+     <width>71</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Last Name</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>230</y>
+     <width>71</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Answer</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>290</y>
+     <width>111</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Retype Answer</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="signUPLabel">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>30</y>
+     <width>191</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="focusPolicy">
+    <enum>Qt::NoFocus</enum>
+   </property>
+   <property name="text">
+    <string>SIGN UP AS A PRO</string>
    </property>
   </widget>
  </widget>
