--- a/TicTacToe/resetpassword.ui
+++ b/TicTacToe/resetpassword.ui
@@ -158,6 +158,13 @@
    </property>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>resetFirstNameInput</tabstop>
+  <tabstop>resetLastName</tabstop>
+  <tabstop>resetUserName</tabstop>
+  <tabstop>resetHelpButton</tabstop>
+  <tabstop>resetSubmitButton</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
