--- a/TicTacToe/selectgamemode.ui
+++ b/TicTacToe/selectgamemode.ui
@@ -29,7 +29,7 @@
    </item>
    <item>
     <property name="text">
-     <string>Player vs. A.i.</string>
+     <string>Player vs A.I</string>
     </property>
    </item>
    <item>
@@ -47,22 +47,34 @@
      <height>16</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
    <property name="text">
     <string>Selet your gamemode </string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>70</x>
      <y>90</y>
-     <width>158</width>
-     <height>25</height>
+     <width>195</width>
+     <height>30</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QPushButton" name="BackButton">
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="text">
        <string>Back</string>
       </property>
@@ -70,6 +82,12 @@
     </item>
     <item>
      <widget class="QPushButton" name="okButton">
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="text">
        <string>Ok</string>
       </property>
