--- a/TicTacToe/resources.qrc
+++ b/TicTacToe/resources.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/images">
         <file>X.png</file>
         <file>O_file.png</file>
+        <file>background.png</file>
     </qresource>
 </RCC>
