--- a/TicTacToe/maintictactoe.ui
+++ b/TicTacToe/maintictactoe.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>mainTicTacToe</string>
+   <string>Main Menu</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QFrame" name="frame">
