player vs player can now switch between player one as x or as O.  Fixed the AI to begin depands on the level that you choose.

--- a/TicTacToe/gamemode.ui
+++ b/TicTacToe/gamemode.ui
@@ -65,6 +65,10 @@
            <property name="text">
             <string>Player vs AI</string>
            </property>
+           <property name="icon">
+            <iconset>
+             <normaloff>images/Icons/A.i. Icon.png</normaloff>images/Icons/A.i. Icon.png</iconset>
+           </property>
           </item>
          </widget>
         </item>
