--- a/TicTacToe/loginscene.ui
+++ b/TicTacToe/loginscene.ui
@@ -16,8 +16,8 @@
   <widget class="QLabel" name="Username">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>70</y>
+     <x>280</x>
+     <y>80</y>
      <width>111</width>
      <height>16</height>
     </rect>
@@ -35,8 +35,8 @@
   <widget class="QLabel" name="Password">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>130</y>
+     <x>280</x>
+     <y>150</y>
      <width>111</width>
      <height>16</height>
     </rect>
@@ -54,8 +54,8 @@
   <widget class="QLineEdit" name="loginPassword">
    <property name="geometry">
     <rect>
-     <x>142</x>
-     <y>121</y>
+     <x>130</x>
+     <y>140</y>
      <width>141</width>
      <height>31</height>
     </rect>
@@ -67,8 +67,8 @@
   <widget class="QLineEdit" name="loginUsername">
    <property name="geometry">
     <rect>
-     <x>142</x>
-     <y>60</y>
+     <x>130</x>
+     <y>70</y>
      <width>141</width>
      <height>31</height>
     </rect>
@@ -85,6 +85,7 @@
    </property>
    <property name="font">
     <font>
+     <pointsize>10</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -96,8 +97,8 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>260</y>
+     <x>110</x>
+     <y>240</y>
      <width>195</width>
      <height>30</height>
     </rect>
