--- a/TicTacToe/registrationscene.ui
+++ b/TicTacToe/registrationscene.ui
@@ -257,14 +257,15 @@
   <widget class="QLabel" name="signUPLabel">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>30</y>
+     <x>210</x>
+     <y>20</y>
      <width>191</width>
-     <height>21</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
     <font>
+     <pointsize>10</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -276,13 +277,13 @@
     <string>SIGN UP AS A PRO</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>360</y>
-     <width>195</width>
-     <height>30</height>
+     <x>120</x>
+     <y>330</y>
+     <width>271</width>
+     <height>61</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
