--- a/TicTacToe/gamemode.ui
+++ b/TicTacToe/gamemode.ui
@@ -58,7 +58,7 @@
           </item>
           <item>
            <property name="text">
-            <string>Player VS Player</string>
+            <string>Player vs Player</string>
            </property>
           </item>
           <item>
