Implemented the easy ai mode. please do not commit anything jason because easy is working.

--- a/TicTacToe/difficultylevel.ui
+++ b/TicTacToe/difficultylevel.ui
@@ -66,6 +66,9 @@
      <bold>true</bold>
     </font>
    </property>
+   <property name="accessibleName">
+    <string>easyButton</string>
+   </property>
    <property name="text">
     <string>EASY</string>
    </property>
